fix alignment of the comment text in last comment widget

--- a/web/app/components/comment/_view/_preview/comment_view_preview.scss
+++ b/web/app/components/comment/_view/_preview/comment_view_preview.scss
@@ -37,6 +37,7 @@
 
     .comment__text {
       display: inline;
+      vertical-align: bottom;
     }
   }
 }
